make it compile on JDK1.4